--- a/translations/ar.json
+++ b/translations/ar.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "إدارة مياه IIT مدراس زنجبار",
+  "app_title": "إدارة مياه IIT مدراس",
   "select_tank_sump": "اختر خزان/بئر",
   "main_sump": "البئر الرئيسي",
   "pampa_sump": "بئر بامبا",
