--- a/translations/en.json
+++ b/translations/en.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT Madras Zanzibar Water Management",
+  "app_title": "IIT Madras Water Management",
   "select_tank_sump": "Select the Tank/Sump",
   "main_sump": "Main Sump",
   "pampa_sump": "Pampa Sump",
