--- a/translations/es.json
+++ b/translations/es.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "Gestión del Agua IIT Madras Zanzibar",
+  "app_title": "Gestión del Agua IIT Madras",
   "select_tank_sump": "Seleccionar Tanque/Sumidero",
   "main_sump": "Sumidero Principal",
   "pampa_sump": "Sumidero Pampa",
