--- a/translations/fr.json
+++ b/translations/fr.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "Gestion de l'Eau IIT Madras Zanzibar",
+  "app_title": "Gestion de l'Eau IIT Madras",
   "select_tank_sump": "Sélectionner le Réservoir/Puisard",
   "main_sump": "Puisard Principal",
   "pampa_sump": "Puisard Pampa",
