--- a/translations/gu.json
+++ b/translations/gu.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT મદ્રાસ ઝાંઝીબાર જલ વ્યવસ્થાપન",
+  "app_title": "IIT મદ્રાસ જલ વ્યવસ્થાપન",
   "select_tank_sump": "ટાંકી/સમ્પ પસંદ કરો",
   "main_sump": "મુખ્ય સમ્પ",
   "pampa_sump": "પમ્પા સમ્પ",
