--- a/translations/hi.json
+++ b/translations/hi.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT मद्रास जंजीबार जल प्रबंधन",
+  "app_title": "IIT मद्रास जल प्रबंधन",
   "select_tank_sump": "टैंक/सम्प चुनें",
   "main_sump": "मुख्य सम्प",
   "pampa_sump": "पम्पा सम्प",
