--- a/translations/mr.json
+++ b/translations/mr.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT मद्रास जांजिबार जल व्यवस्थापन",
+  "app_title": "IIT मद्रास जल व्यवस्थापन",
   "select_tank_sump": "टाकी/सम्प निवडा",
   "main_sump": "मुख्य सम्प",
   "pampa_sump": "पंपा सम्प",
