--- a/translations/sw.json
+++ b/translations/sw.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "Usimamizi wa Maji wa IIT Madras Zanzibar",
+  "app_title": "Usimamizi wa Maji wa IIT Madras",
   "select_tank_sump": "Chagua Tanki/Tangi",
   "main_sump": "Tangi Kuu",
   "pampa_sump": "Tangi cha Pampa",
