--- a/translations/ta.json
+++ b/translations/ta.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT Madras Zanzibar நீர் மேலாண்மை",
+  "app_title": "IIT Madras நீர் மேலாண்மை",
   "select_tank_sump": "தொட்டி/ஆழ்வாரை தேர்வு செய்யவும்",
   "main_sump": "முக்கிய தொட்டி",
   "pampa_sump": "பம்பா தொட்டி",
