--- a/translations/te.json
+++ b/translations/te.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT Madras Zanzibar నీటి నిర్వహణ",
+  "app_title": "IIT Madras నీటి నిర్వహణ",
   "select_tank_sump": "ట్యాంక్/సంపు ఎంచుకోండి",
   "main_sump": "ప్రధాన సంపు",
   "pampa_sump": "పంపా సంపు",
