--- a/translations/ar.json
+++ b/translations/ar.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "خزان الهيمالايا العلوي",
   "install_app": "تثبيت التطبيق",
   "back": "رجوع",
-  "water_level_monitoring": "إدارة مياه IITMZ",
+  "water_level_monitoring": "إدارة مياه IIT مدراس",
   "water_management": "",
   "language_label": "اللغة:",
   "language_select": "اختر اللغة",
