--- a/translations/en.json
+++ b/translations/en.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "Himalaya OHT",
   "install_app": "Install App",
   "back": "Back",
-  "water_level_monitoring": "IITMZ Water Management",
+  "water_level_monitoring": "IIT Madras Water Management",
   "water_management": "",
   "language_label": "Language:",
   "language_select": "Select Language",
