--- a/translations/es.json
+++ b/translations/es.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "Himalaya OHT",
   "install_app": "Instalar Aplicación",
   "back": "Atrás",
-  "water_level_monitoring": "Gestión del Agua IITMZ",
+  "water_level_monitoring": "Gestión del Agua IIT Madras",
   "water_management": "",
   "language_label": "Idioma:",
   "language_select": "Seleccionar Idioma",
