--- a/translations/fr.json
+++ b/translations/fr.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "Himalaya OHT",
   "install_app": "Installer l'Application",
   "back": "Retour",
-  "water_level_monitoring": "Gestion de l'Eau IITMZ",
+  "water_level_monitoring": "Gestion de l'Eau IIT Madras",
   "water_management": "",
   "language_label": "Langue:",
   "language_select": "Sélectionner la Langue",
