--- a/translations/gu.json
+++ b/translations/gu.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "હિમાલય OHT",
   "install_app": "ઍપ ઇન્સ્ટોલ કરો",
   "back": "પાછળ",
-  "water_level_monitoring": "IITMZ જલ વ્યવસ્થાપન",
+  "water_level_monitoring": "IIT Madras જલ વ્યવસ્થાપન",
   "water_management": "",
   "language_label": "ભાષા:",
   "language_select": "ભાષા પસંદ કરો",
