--- a/translations/hi.json
+++ b/translations/hi.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "हिमालय OHT",
   "install_app": "ऐप इंस्टॉल करें",
   "back": "वापस",
-  "water_level_monitoring": "IITMZ जल प्रबंधन",
+  "water_level_monitoring": "IIT Madras जल प्रबंधन",
   "water_management": "",
   "language_label": "भाषा:",
   "language_select": "भाषा चुनें",
