--- a/translations/mr.json
+++ b/translations/mr.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "हिमालय OHT",
   "install_app": "अॅप इंस्टॉल करा",
   "back": "परत",
-  "water_level_monitoring": "IITMZ जल व्यवस्थापन",
+  "water_level_monitoring": "IIT Madras जल व्यवस्थापन",
   "water_management": "",
   "language_label": "भाषा:",
   "language_select": "भाषा निवडा",
