--- a/translations/sw.json
+++ b/translations/sw.json
@@ -8,7 +8,7 @@
   "himalaya_oht": "Himalaya OHT",
   "install_app": "Sakinisha Programu",
   "back": "Rudi",
-  "water_level_monitoring": "Usimamizi wa Maji wa IITMZ",
+  "water_level_monitoring": "Usimamizi wa Maji wa IIT Madras",
   "water_management": "",
   "language_label": "Lugha:",
   "language_select": "Chagua Lugha",
