--- a/translations/ta.json
+++ b/translations/ta.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT Madras நீர் மேலாண்மை",
+  "app_title": "ஐஐடி மெட்ராஸ் நீர் மேலாண்மை",
   "select_tank_sump": "தொட்டி/ஆழ்வாரை தேர்வு செய்யவும்",
   "main_sump": "முக்கிய தொட்டி",
   "pampa_sump": "பம்பா தொட்டி",
@@ -8,7 +8,7 @@
   "himalaya_oht": "இமாலய OHT",
   "install_app": "பயன்பாட்டை நிறுவுங்கள்",
   "back": "பின்",
-  "water_level_monitoring": "IITMZ நீர் மேலாண்மை",
+  "water_level_monitoring": "ஐஐடி மெட்ராஸ் நீர் மேலாண்மை",
   "water_management": "",
   "language_label": "மொழி:",
   "language_select": "மொழியைத் தேர்வு செய்யவும்",
