--- a/translations/te.json
+++ b/translations/te.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "IIT Madras నీటి నిర్వహణ",
+  "app_title": "ఐ ఐ టి మద్రాసు నీటి నిర్వహణ",
   "select_tank_sump": "ట్యాంక్/సంపు ఎంచుకోండి",
   "main_sump": "ప్రధాన సంపు",
   "pampa_sump": "పంపా సంపు",
@@ -8,7 +8,7 @@
   "himalaya_oht": "హిమాలయ OHT",
   "install_app": "యాప్‌ను ఇన్‌స్టాల్ చేయండి",
   "back": "వెనుకకు",
-  "water_level_monitoring": "IITMZ నీటి నిర్వహణ",
+  "water_level_monitoring": "ఐ ఐ టి మద్రాసు నీటి నిర్వహణ",
   "water_management": "",
   "language_label": "భాష:",
   "language_select": "భాషను ఎంచుకోండి",
