Update Tamil translations in ta.json

--- a/translations/ta.json
+++ b/translations/ta.json
@@ -1,6 +1,6 @@
 {
   "app_title": "ஐஐடி மெட்ராஸ் நீர் மேலாண்மை",
-  "select_tank_sump": "தொட்டி/ஆழ்வாரை தேர்வு செய்யவும்",
+  "select_tank_sump": "தொட்டி/சம்ப் தேர்வு செய்யவும்",
   "main_sump": "முக்கிய தொட்டி",
   "pampa_sump": "பம்பா தொட்டி",
   "mandakini_sump": "மண்டாகிணி தொட்டி",
@@ -36,4 +36,5 @@
   "repeat_alerts": "எச்சரிக்கைகளை மீண்டும் செய் (ஒவ்வொரு 5 நிமிடத்திற்கும்)",
   "min_threshold": "குறைந்தபட்சம்",
   "max_threshold": "அதிகபட்சம்"
+
 }
