--- a/translations/gu.json
+++ b/translations/gu.json
@@ -1,11 +1,6 @@
 {
   "app_title": "IIT મદ્રાસ જલ વ્યવસ્થાપન",
   "select_tank_sump": "ટાંકી/સમ્પ પસંદ કરો",
-  "main_sump": "મુખ્ય સમ્પ",
-  "pampa_sump": "પમ્પા સમ્પ",
-  "mandakini_sump": "મંડાકિની સમ્પ",
-  "icsr_sump": "ICSR સમ્પ",
-  "himalaya_oht": "હિમાલય OHT",
   "install_app": "ઍપ ઇન્સ્ટોલ કરો",
   "back": "પાછળ",
   "water_level_monitoring": "IIT Madras જલ વ્યવસ્થાપન",
@@ -35,5 +30,16 @@
   "enable_alerts": "સતર્કતા સક્ષમ કરો",
   "repeat_alerts": "સતર્કતાને પુનરાવર્તિત કરો (દર 5 મિનિટે)",
   "min_threshold": "ન્યૂનતમ",
-  "max_threshold": "મહત્તમ"
+  "max_threshold": "મહત્તમ",
+  "page_main_sump": "મુખ્ય સમ્પ",
+  "sensor_main_sump_Main Sump": "મુખ્ય સમ્પ",
+  "page_pampa": "પમ્પા સમ્પ",
+  "sensor_pampa_Pampa Sump": "પમ્પા સમ્પ",
+  "page_himalaya": "હિમાલય OHT",
+  "sensor_himalaya_Himalaya OHT": "હિમાલય OHT",
+  "page_mandakini": "મંદાકિની સમ્પ",
+  "sensor_mandakini_Mandakini Sump": "મંદાકિની સમ્પ",
+  "page_ICSR": "આઈસીએસઆર",
+  "sensor_ICSR_ICSR_1": "ICSR સમ્પ",
+  "sensor_ICSR_ICSR_2": "ICSR OHT"
 }
