--- a/translations/hi.json
+++ b/translations/hi.json
@@ -1,11 +1,6 @@
 {
   "app_title": "IIT मद्रास जल प्रबंधन",
   "select_tank_sump": "टैंक/सम्प चुनें",
-  "main_sump": "मुख्य सम्प",
-  "pampa_sump": "पम्पा सम्प",
-  "mandakini_sump": "मंडाकिनी सम्प",
-  "icsr_sump": "ICSR सम्प",
-  "himalaya_oht": "हिमालय OHT",
   "install_app": "ऐप इंस्टॉल करें",
   "back": "वापस",
   "water_level_monitoring": "IIT Madras जल प्रबंधन",
@@ -35,5 +30,16 @@
   "enable_alerts": "अलर्ट सक्षम करें",
   "repeat_alerts": "अलर्ट दोहराएं (हर 5 मिनट)",
   "min_threshold": "न्यूनतम",
-  "max_threshold": "अधिकतम"
+  "max_threshold": "अधिकतम",
+  "page_main_sump": "मुख्य नाली",
+  "sensor_main_sump_Main Sump": "मुख्य नाली",
+  "page_pampa": "पम्पा सम्प",
+  "sensor_pampa_Pampa Sump": "पम्पा सम्प",
+  "page_himalaya": "हिमालय ओएचटी",
+  "sensor_himalaya_Himalaya OHT": "हिमालय ओएचटी",
+  "page_mandakini": "मंदाकिनी नाला",
+  "sensor_mandakini_Mandakini Sump": "मंदाकिनी नाला",
+  "page_ICSR": "आईसीएसआर",
+  "sensor_ICSR_ICSR_1": "आईसीएसआर सम्प",
+  "sensor_ICSR_ICSR_2": "आईसीएसआर ओएचटी"
 }
