--- a/translations/sw.json
+++ b/translations/sw.json
@@ -1,11 +1,6 @@
 {
   "app_title": "Usimamizi wa Maji wa IIT Madras",
   "select_tank_sump": "Chagua Tanki/Tangi",
-  "main_sump": "Tangi Kuu",
-  "pampa_sump": "Tangi cha Pampa",
-  "mandakini_sump": "Tangi cha Mandakini",
-  "icsr_sump": "Tangi cha ICSR",
-  "himalaya_oht": "Himalaya OHT",
   "install_app": "Sakinisha Programu",
   "back": "Rudi",
   "water_level_monitoring": "Usimamizi wa Maji wa IIT Madras",
@@ -35,5 +30,16 @@
   "enable_alerts": "Wezesha Onyo",
   "repeat_alerts": "Kurudia Onyo (kila dakika 5)",
   "min_threshold": "Kiwango cha Chini",
-  "max_threshold": "Kiwango cha Juu"
+  "max_threshold": "Kiwango cha Juu",
+  "page_main_sump": "Sump Kuu",
+  "sensor_main_sump_Main Sump": "Sump Kuu",
+  "page_pampa": "Pampa Sump",
+  "sensor_pampa_Pampa Sump": "Pampa Sump",
+  "page_himalaya": "Himalaya OHT",
+  "sensor_himalaya_Himalaya OHT": "Himalaya OHT",
+  "page_mandakini": "Kilima cha Mandakini",
+  "sensor_mandakini_Mandakini Sump": "Kilima cha Mandakini",
+  "page_ICSR": "ICSR",
+  "sensor_ICSR_ICSR_1": "Sump ya ICSR",
+  "sensor_ICSR_ICSR_2": "ICSR OHT"
 }
