--- a/translations/ta.json
+++ b/translations/ta.json
@@ -37,8 +37,8 @@
   "sensor_pampa_Pampa Sump": "பம்பா நீர்த் தேக்கத் தொட்டி",
   "page_himalaya": "இமாலய நீர் தொட்டி",
   "sensor_himalaya_Himalaya OHT": "இமாலய நீர் தொட்டி",
-  "page_mandakini": "மண்டாகிணி நீர்த் தேக்கத் தொட்டி",
-  "sensor_mandakini_Mandakini Sump": "மண்டாகிணி நீர்த் தேக்கத் தொட்டி",
+  "page_mandakini": "மந்தாகினி நீர்த் தேக்கத் தொட்டி",
+  "sensor_mandakini_Mandakini Sump": "மந்தாகினி நீர்த் தேக்கத் தொட்டி",
   "page_ICSR": "ஐ.சி.எஸ்.ஆர்.",
   "sensor_ICSR_ICSR_1": "ஐ.சி.எஸ்.ஆர் நீர்த் தேக்கத் தொட்டி",
   "sensor_ICSR_ICSR_2": "ஐ.சி.எஸ்.ஆர் நீர் தொட்டி"
