--- a/translations/ta.json
+++ b/translations/ta.json
@@ -31,15 +31,15 @@
   "repeat_alerts": "எச்சரிக்கைகளை மீண்டும் செய் (ஒவ்வொரு 5 நிமிடத்திற்கும்)",
   "min_threshold": "குறைந்தபட்சம்",
   "max_threshold": "அதிகபட்சம்",
-  "page_main_sump": "பிரதான நீர்த் தேக்கத் தொட்டி",
-  "sensor_main_sump_Main Sump": "பிரதான நீர்த் தேக்கத் தொட்டி",
-  "page_pampa": "பம்பா நீர்த் தேக்கத் தொட்டி",
-  "sensor_pampa_Pampa Sump": "பம்பா நீர்த் தேக்கத் தொட்டி",
+  "page_main_sump": "பிரதான நீர் தேக்கத் தொட்டி",
+  "sensor_main_sump_Main Sump": "பிரதான நீர் தேக்கத் தொட்டி",
+  "page_pampa": "பம்பா நீர் தேக்கத் தொட்டி",
+  "sensor_pampa_Pampa Sump": "பம்பா நீர் தேக்கத் தொட்டி",
   "page_himalaya": "இமாலய நீர் தொட்டி",
   "sensor_himalaya_Himalaya OHT": "இமாலய நீர் தொட்டி",
-  "page_mandakini": "மந்தாகினி நீர்த் தேக்கத் தொட்டி",
-  "sensor_mandakini_Mandakini Sump": "மந்தாகினி நீர்த் தேக்கத் தொட்டி",
+  "page_mandakini": "மந்தாகினி நீர் தேக்கத் தொட்டி",
+  "sensor_mandakini_Mandakini Sump": "மந்தாகினி நீர் தேக்கத் தொட்டி",
   "page_ICSR": "ஐ.சி.எஸ்.ஆர்.",
-  "sensor_ICSR_ICSR_1": "ஐ.சி.எஸ்.ஆர் நீர்த் தேக்கத் தொட்டி",
+  "sensor_ICSR_ICSR_1": "ஐ.சி.எஸ்.ஆர் நீர் தேக்கத் தொட்டி",
   "sensor_ICSR_ICSR_2": "ஐ.சி.எஸ்.ஆர் நீர் தொட்டி"
 }
