--- a/translations/hi.json
+++ b/translations/hi.json
@@ -31,14 +31,14 @@
   "repeat_alerts": "अलर्ट दोहराएं (हर 5 मिनट)",
   "min_threshold": "न्यूनतम",
   "max_threshold": "अधिकतम",
-  "page_main_sump": "मुख्य नाली",
-  "sensor_main_sump_Main Sump": "मुख्य नाली",
+  "page_main_sump": "मुख्य सम्प",
+  "sensor_main_sump_Main Sump": "मुख्य सम्प",
   "page_pampa": "पम्पा सम्प",
   "sensor_pampa_Pampa Sump": "पम्पा सम्प",
   "page_himalaya": "हिमालय ओएचटी",
   "sensor_himalaya_Himalaya OHT": "हिमालय ओएचटी",
-  "page_mandakini": "मंदाकिनी नाला",
-  "sensor_mandakini_Mandakini Sump": "मंदाकिनी नाला",
+  "page_mandakini": "मंदाकिनी सम्प",
+  "sensor_mandakini_Mandakini Sump": "मंदाकिनी सम्प",
   "page_ICSR": "आईसीएसआर",
   "sensor_ICSR_ICSR_1": "आईसीएसआर सम्प",
   "sensor_ICSR_ICSR_2": "आईसीएसआर ओएचटी"
