--- a/translations/es.json
+++ b/translations/es.json
@@ -41,5 +41,7 @@
   "sensor_mandakini_Mandakini Sump": "Sumidero de Mandakini",
   "page_ICSR": "ICSR",
   "sensor_ICSR_ICSR_1": "Sumidero ICSR",
-  "sensor_ICSR_ICSR_2": "ICSR OHT"
+  "sensor_ICSR_ICSR_2": "ICSR OHT",
+  "page_C2_Sump": "Cárter C2",
+  "sensor_C2_Sump_C2 Sump": "Cárter C2"
 }
