--- a/translations/mr.json
+++ b/translations/mr.json
@@ -41,5 +41,7 @@
   "sensor_mandakini_Mandakini Sump": "मंदाकिनी संप",
   "page_ICSR": "आयसीएसआर",
   "sensor_ICSR_ICSR_1": "आयसीएसआर संप",
-  "sensor_ICSR_ICSR_2": "आयसीएसआर ओएचटी"
+  "sensor_ICSR_ICSR_2": "आयसीएसआर ओएचटी",
+  "page_C2_Sump": "सी२ संप",
+  "sensor_C2_Sump_C2 Sump": "सी२ संप"
 }
