--- a/translations/ta.json
+++ b/translations/ta.json
@@ -41,5 +41,6 @@
   "sensor_mandakini_Mandakini Sump": "மந்தாகினி நீர் தேக்கத் தொட்டி",
   "page_ICSR": "ஐ.சி.எஸ்.ஆர்.",
   "sensor_ICSR_ICSR_1": "ஐ.சி.எஸ்.ஆர் நீர் தேக்கத் தொட்டி",
-  "sensor_ICSR_ICSR_2": "ஐ.சி.எஸ்.ஆர் நீர் தொட்டி"
+  "sensor_ICSR_ICSR_2": "ஐ.சி.எஸ்.ஆர் நீர் தொட்டி",
+  "sensor_C2_Sump_C2 Sump": "C2 நீர் தேக்கத் தொட்டி"
 }
