--- a/translations/ar.json
+++ b/translations/ar.json
@@ -41,5 +41,7 @@
   "sensor_mandakini_Mandakini Sump": "حوض مانداكيني",
   "page_ICSR": "ICSR",
   "sensor_ICSR_ICSR_1": "حوض ICSR",
-  "sensor_ICSR_ICSR_2": "ICSR OHT"
+  "sensor_ICSR_ICSR_2": "ICSR OHT",
+  "page_C2_Sump": "حوض الزيت C2",
+  "sensor_C2_Sump_C2 Sump": "حوض الزيت C2"
 }
