--- a/translations/en.json
+++ b/translations/en.json
@@ -41,5 +41,7 @@
   "sensor_mandakini_Mandakini Sump": "Mandakini Sump",
   "page_ICSR": "ICSR",
   "sensor_ICSR_ICSR_1": "ICSR Sump",
-  "sensor_ICSR_ICSR_2": "ICSR OHT"
+  "sensor_ICSR_ICSR_2": "ICSR OHT",
+  "page_C2_Sump": "C2 Sump",
+  "sensor_C2_Sump_C2 Sump": "C2 Sump"
 }
