--- a/translations/gu.json
+++ b/translations/gu.json
@@ -41,5 +41,7 @@
   "sensor_mandakini_Mandakini Sump": "મંદાકિની સમ્પ",
   "page_ICSR": "આઈસીએસઆર",
   "sensor_ICSR_ICSR_1": "ICSR સમ્પ",
-  "sensor_ICSR_ICSR_2": "ICSR OHT"
+  "sensor_ICSR_ICSR_2": "ICSR OHT",
+  "page_C2_Sump": "C2 સમ્પ",
+  "sensor_C2_Sump_C2 Sump": "C2 સમ્પ"
 }
