--- a/translations/te.json
+++ b/translations/te.json
@@ -41,5 +41,7 @@
   "sensor_mandakini_Mandakini Sump": "మందాకిని సంప్",
   "page_ICSR": "ఐసిఎస్ఆర్",
   "sensor_ICSR_ICSR_1": "ICSR సంప్",
-  "sensor_ICSR_ICSR_2": "ICSR OHT"
+  "sensor_ICSR_ICSR_2": "ICSR OHT",
+  "page_C2_Sump": "C2 సంప్",
+  "sensor_C2_Sump_C2 Sump": "C2 సంప్"
 }
