--- a/translations/ta.json
+++ b/translations/ta.json
@@ -42,5 +42,9 @@
   "page_ICSR": "ஐ.சி.எஸ்.ஆர்.",
   "sensor_ICSR_ICSR_1": "ஐ.சி.எஸ்.ஆர் நீர் தேக்கத் தொட்டி",
   "sensor_ICSR_ICSR_2": "ஐ.சி.எஸ்.ஆர் நீர் தொட்டி",
-  "sensor_C2_Sump_C2 Sump": "C2 நீர் தேக்கத் தொட்டி"
+  "page_C2_Sump": "C2 நீர் தேக்கத் தொட்டி",
+  "sensor_C2_Sump_C2 Sump": "C2 நீர் தேக்கத் தொட்டி",
+  "page_NAC_2": "என்ஏசி 2",
+  "sensor_NAC_2_NAC2_Grey": "என்ஏசி 2 சுத்திகரிக்கப்பட்ட நீர் தொட்டி",
+  "sensor_NAC_2_NAC2_Metro": "என்ஏசி 2 மெட்ரோ நீர் தொட்டி"
 }
