--- a/translations/es.json
+++ b/translations/es.json
@@ -43,5 +43,8 @@
   "sensor_ICSR_ICSR_1": "Sumidero ICSR",
   "sensor_ICSR_ICSR_2": "ICSR OHT",
   "page_C2_Sump": "Cárter C2",
-  "sensor_C2_Sump_C2 Sump": "Cárter C2"
+  "sensor_C2_Sump_C2_Sump": "Cárter C2",
+  "page_NAC_2": "NAC 2",
+  "sensor_NAC_2_NAC2_Grey": "NAC 2 Aguas grises",
+  "sensor_NAC_2_NAC2_Metro": "NAC 2 Metro Agua"
 }
