--- a/translations/fr.json
+++ b/translations/fr.json
@@ -43,5 +43,8 @@
   "sensor_ICSR_ICSR_1": "Souche ICSR",
   "sensor_ICSR_ICSR_2": "ICSR OHT",
   "page_C2_Sump": "C2 Sump",
-  "sensor_C2_Sump_C2 Sump": "C2 Sump"
+  "sensor_C2_Sump_C2_Sump": "C2 Sump",
+  "page_NAC_2": "NAC 2",
+  "sensor_NAC_2_NAC2_Grey": "NAC 2 Eaux grises",
+  "sensor_NAC_2_NAC2_Metro": "NAC 2 Métro Eau"
 }
