--- a/translations/gu.json
+++ b/translations/gu.json
@@ -43,5 +43,8 @@
   "sensor_ICSR_ICSR_1": "ICSR સમ્પ",
   "sensor_ICSR_ICSR_2": "ICSR OHT",
   "page_C2_Sump": "C2 સમ્પ",
-  "sensor_C2_Sump_C2 Sump": "C2 સમ્પ"
+  "sensor_C2_Sump_C2_Sump": "C2 સમ્પ",
+  "page_NAC_2": "એનએસી 2",
+  "sensor_NAC_2_NAC2_Grey": "NAC 2 ગ્રે વોટર",
+  "sensor_NAC_2_NAC2_Metro": "NAC 2 મેટ્રો પાણી"
 }
