--- a/translations/mr.json
+++ b/translations/mr.json
@@ -43,5 +43,8 @@
   "sensor_ICSR_ICSR_1": "आयसीएसआर संप",
   "sensor_ICSR_ICSR_2": "आयसीएसआर ओएचटी",
   "page_C2_Sump": "सी२ संप",
-  "sensor_C2_Sump_C2 Sump": "सी२ संप"
+  "sensor_C2_Sump_C2_Sump": "सी२ संप",
+  "page_NAC_2": "एनएसी २",
+  "sensor_NAC_2_NAC2_Grey": "एनएसी २ ग्रे वॉटर",
+  "sensor_NAC_2_NAC2_Metro": "एनएसी २ मेट्रो पाणी"
 }
