--- a/translations/te.json
+++ b/translations/te.json
@@ -41,7 +41,10 @@
   "sensor_mandakini_Mandakini Sump": "మందాకిని సంప్",
   "page_ICSR": "ఐసిఎస్ఆర్",
   "sensor_ICSR_ICSR_1": "ICSR సంప్",
-  "sensor_ICSR_ICSR_2": "ICSR OHT",
+  "sensor_ICSR_ICSR_2": "ఐసిఎస్ఆర్ ఓహెచ్‌టి",
   "page_C2_Sump": "C2 సంప్",
-  "sensor_C2_Sump_C2 Sump": "C2 సంప్"
+  "sensor_C2_Sump_C2_Sump": "C2 సంప్",
+  "page_NAC_2": "ఎన్‌ఎసి 2",
+  "sensor_NAC_2_NAC2_Grey": "NAC 2 గ్రే వాటర్",
+  "sensor_NAC_2_NAC2_Metro": "NAC 2 మెట్రో వాటర్"
 }
