--- a/translations/hi.json
+++ b/translations/hi.json
@@ -45,6 +45,6 @@
   "page_C2_Sump": "C2 नाली",
   "sensor_C2_Sump_C2_Sump": "C2 नाली",
   "page_NAC_2": "एनएसी 2",
-  "sensor_NAC_2_NAC2_Grey": "एनएसी 2 ग्रे वाटर",
-  "sensor_NAC_2_NAC2_Metro": "एनएसी 2 मेट्रो वाटर"
+  "sensor_NAC_2_NAC2_Grey": "एनएसी 2 ग्रे वाटर ओएचटी",
+  "sensor_NAC_2_NAC2_Metro": "एनएसी 2 मेट्रो वाटर ओएचटी"
 }
