--- a/translations/mr.json
+++ b/translations/mr.json
@@ -45,6 +45,6 @@
   "page_C2_Sump": "सी२ संप",
   "sensor_C2_Sump_C2_Sump": "सी२ संप",
   "page_NAC_2": "एनएसी २",
-  "sensor_NAC_2_NAC2_Grey": "एनएसी २ ग्रे वॉटर",
-  "sensor_NAC_2_NAC2_Metro": "एनएसी २ मेट्रो पाणी"
+  "sensor_NAC_2_NAC2_Grey": "एनएसी २ ग्रे वॉटर ओएचटी",
+  "sensor_NAC_2_NAC2_Metro": "एनएसी २ मेट्रो वॉटर ओएचटी"
 }
