--- a/translations/ar.json
+++ b/translations/ar.json
@@ -45,6 +45,6 @@
   "page_C2_Sump": "حوض الزيت C2",
   "sensor_C2_Sump_C2_Sump": "حوض الزيت C2",
   "page_NAC_2": "NAC 2",
-  "sensor_NAC_2_NAC2_Grey": "مياه رمادية NAC 2",
-  "sensor_NAC_2_NAC2_Metro": "مياه مترو NAC 2"
+  "sensor_NAC_2_NAC2_Grey": "NAC 2 مياه رمادية OHT",
+  "sensor_NAC_2_NAC2_Metro": "NAC 2 مترو ووتر OHT"
 }
