--- a/translations/fr.json
+++ b/translations/fr.json
@@ -45,6 +45,6 @@
   "page_C2_Sump": "C2 Sump",
   "sensor_C2_Sump_C2_Sump": "C2 Sump",
   "page_NAC_2": "NAC 2",
-  "sensor_NAC_2_NAC2_Grey": "NAC 2 Eaux grises",
-  "sensor_NAC_2_NAC2_Metro": "NAC 2 Métro Eau"
+  "sensor_NAC_2_NAC2_Grey": "NAC 2 Eaux grises OHT",
+  "sensor_NAC_2_NAC2_Metro": "NAC 2 Metro Water OHT"
 }
