--- a/translations/te.json
+++ b/translations/te.json
@@ -45,6 +45,6 @@
   "page_C2_Sump": "C2 సంప్",
   "sensor_C2_Sump_C2_Sump": "C2 సంప్",
   "page_NAC_2": "ఎన్‌ఎసి 2",
-  "sensor_NAC_2_NAC2_Grey": "NAC 2 గ్రే వాటర్",
-  "sensor_NAC_2_NAC2_Metro": "NAC 2 మెట్రో వాటర్"
+  "sensor_NAC_2_NAC2_Grey": "NAC 2 గ్రే వాటర్ OHT",
+  "sensor_NAC_2_NAC2_Metro": "NAC 2 మెట్రో వాటర్ OHT"
 }
